--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -1,10 +1,10 @@
 .game {
     display: none;
     position: relative;
-    top: 10%;
-    left: 5%;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    left: 50%;
+    transform: translate(-50%);
+    top: 6rem;
 
     p {
         color: $elements_bg-color;
@@ -12,17 +12,23 @@
         letter-spacing: 0.15em;
         font-family: $main-font;
         font-size: 1.3rem;
+        align-self: center;
+        position: absolute;
+        top: -6rem;
     }
 
     &__user {
         width: 50%;
+        display: flex;
+        flex-direction: column;
         position: relative;
     }
 
     &__computer {
         width: 50%;
+        display: flex;
+        flex-direction: column;
         position: relative;
-        left: 10%;
     }
 }
 
@@ -42,37 +48,25 @@
 }
 
 .user-choice {
-    position: absolute;
-    top: 30%;
-    left: 20%;
-    height: 100%;
-    width: 100%;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    height: 8rem;
+    width: 8rem;
 
     .options__icon {
-        height: 45%;
-        width: 52%;
-        top: 0;
-        right: 75%;
+        cursor: auto;
 
-        &:hover {
-            filter: brightness(100%);
-            cursor: auto;
-        }
-    }
-
-    .image {
-        background-position: 32% 32%;
+        @include option-hover(100%);
     }
 }
 
 .choice-placement {
-    height: 45%;
-    width: 53%;
     background: #17223e;
+    height: 8rem;
+    width: 8rem;
     border-radius: 50%;
-    position: relative;
-    top: 12%;
-    left: 0;
+    align-self: center;
     z-index: -1;
 
     .computer-choice {
@@ -84,18 +78,11 @@
     }
 
     .options__icon {
-        height: 100%;
-        width: 100%;
         top: 0;
         right: 0;
-        &:hover {
-            filter: brightness(100%);
-            cursor: auto;
-        }
-    }
+        cursor: auto;
 
-    .image {
-        background-position: 32% 32%;
+        @include option-hover(100%);
     }
 }
 
@@ -106,12 +93,12 @@
 .result {
     display: none;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 25%;
-    left: 20%;
+    left: 50%;
+    transform: translate(-50%);
     animation: appears 3s 1;
 
     &__header {
@@ -155,16 +142,16 @@
     }
 
     to {
-        right: 10%;
+        right: 15%;
     }
 }
 
 @keyframes move-right {
     from {
-        right: 8%;
+        left: 0;
     }
 
     to {
-        left: 27%;
+        left: 15%;
     }
 }
