--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,14 +1,14 @@
 header {
     width: 50%;
-    border: 2px solid $border-color;
-    border-radius: 20px;
-    display: flex;
+    height: 15%;
+    border: 0.2em solid $border-color;
+    border-radius: 1.2em;
+    @include flex-center-relative;
     padding: 1.5em;
-    align-items: center;
-    position: relative;
     left: 50%;
-    // top: 10%;
-    transform: translate(-50%, 10%);
+    top: 2%;
+    transform: translate(-50%);
+    justify-content: space-between;
 
     img {
         height: 100%;
@@ -16,32 +16,34 @@ header {
 }
 
 .score-box {
-    height: 70%;
-    width: 18%;
+    height: 6rem;
+    width: 7rem;
     background: $elements_bg-color;
-    border-radius: 10px;
-    position: absolute;
-    right: 1.5em;
-    display: flex;
-    justify-content: center;
+    border-radius: 0.5em;
+    @include flex-center-relative;
 
     &__text {
-        display: flex;
+        height: 100%;
+        @include flex-center-relative;
         flex-direction: column;
-        align-items: center;
-        position: relative;
-        top: 10%;
 
         span {
             color: hsl(229, 64%, 46%);
-            font: 700 1rem $main-font;
+            font: set-font(1rem);
             text-transform: uppercase;
             letter-spacing: 2px;
         }
 
         .points {
-            font: 700 3.5rem $main-font;
+            font: set-font(3rem);
             color: #58566b;
+            // line-height: 3.5rem;
+            position: relative;
+            top: -0.25em;
+        }
+
+        .score {
+            position: relative;
             top: 0;
         }
     }
