--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,4 @@
-@import './config', './header', './options', './rules', './game';
-// , './responsive';
+@import './config', './header', './options', './rules', './game', './responsive';
 
 body {
     background: $background-color;
