--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -15,6 +15,7 @@
         align-self: center;
         position: absolute;
         top: -6rem;
+        text-align: center;
     }
 
     &__user {
@@ -142,7 +143,7 @@
     }
 
     to {
-        right: 15%;
+        right: 30%;
     }
 }
 
@@ -152,6 +153,6 @@
     }
 
     to {
-        left: 15%;
+        left: 30%;
     }
 }
