--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -3,6 +3,10 @@
         width: 85%;
     }
 
+    .rules-btn {
+        bottom: 8rem;
+    }
+
     .options {
         width: 20rem;
         height: 20rem;
