--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -466,7 +466,7 @@ header img {
           animation: appears 3s 1;
 }
 
-.result__header {
+.result__header h1 {
   color: #f8f8f8;
   font-family: "Barlow Semi Condensed", sans-serif;
   text-transform: uppercase;
@@ -652,12 +652,12 @@ header img {
     width: 10rem;
   }
   .game__user {
-    right: 4rem;
+    right: 3rem;
   }
   .game__computer {
     left: 3rem;
   }
-  .user-choice {
+  .user-choice .options__icon {
     top: -2rem;
   }
   .choice-placement {
@@ -668,10 +668,15 @@ header img {
   }
   .result {
     top: 4rem;
+    width: 100%;
   }
   .result__header {
+    width: 100%;
+    position: relative;
+  }
+  .result__header h1 {
     font-size: 3rem;
-    width: 12rem;
+    position: relative;
   }
   .result button {
     width: 15rem;
